@@ -15,6 +15,7 @@ For a detailed view of what has changed, refer to the {uri-project}/commits/mast
 * add support for example blocks
 * fix crash if document contains a page break
 * add support for floating title
+* fix crash if document contains thematic break
 
 == 0.4.0 (2021-02-14) - @slonopotamus
 
